feat(core): 添加飞书插件支持并更新版本
- 将版本从 2026.1.24-cn.3 更新为 2026.1.30-beta.2
- 在打包配置中添加飞书插件目录 dist/feishu/**
- 设置飞书插件默认启用状态 BUNDLED_ENABLED_BY_DEFAULT
- 更新插件配置类型定义以支持飞书集成

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moltbot-cn",
-  "version": "2026.1.24-cn.3",
+  "version": "2026.1.30-beta.2",
   "description": "Moltbot 中文版 - WhatsApp gateway CLI (Baileys web) with Pi RPC agent",
   "type": "module",
   "main": "dist/index.js",
@@ -45,6 +45,7 @@
     "dist/slack/**",
     "dist/telegram/**",
     "dist/line/**",
+    "dist/feishu/**",
     "dist/tui/**",
     "dist/tts/**",
     "dist/web/**",
