chore(release): 更新包名称和发布配置为 openclaw-cn
- 将 npm 包名称从 moltbot-cn 更改为 openclaw-cn
- 更新 GitHub 仓库链接和 Star 徽章链接
- 修改 README 中的项目名称和相关命令引用
- 在工作流中添加动态 npm 标签确定逻辑
- 移除版本号中的 beta 标记以准备正式发布
- 更新文档中的安装命令和配置文件路径

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -40,5 +40,17 @@ jobs:
       - name: Build UI
         run: pnpm ui:build
 
+      - name: Determine npm tag
+        id: npm-tag
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          if [[ "$VERSION" == *"-beta"* ]]; then
+            echo "tag=beta" >> $GITHUB_OUTPUT
+          else
+            echo "tag=latest" >> $GITHUB_OUTPUT
+          fi
+
       - name: Publish to npm
-        run: pnpm publish --access public --no-git-checks --provenance --tag latest
+        run: pnpm publish --access public --no-git-checks --provenance --tag ${{ steps.npm-tag.outputs.tag }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
