--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openclaw-cn",
-  "version": "2026.1.30-beta.4",
+  "version": "2026.1.30",
   "description": "Openclaw 中文版 - WhatsApp gateway CLI (Baileys web) with Pi RPC agent",
   "type": "module",
   "main": "dist/index.js",
