--- a/extensions/feishu/package.json
+++ b/extensions/feishu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openclaw-cn/feishu",
-  "version": "2026.1.31",
+  "version": "2026.1.32",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -12,12 +12,13 @@
   },
   "files": [
     "dist/",
+    "openclaw.plugin.json",
     "package.json",
     "README.md"
   ],
   "openclaw": {
     "extensions": [
-      "./index.ts"
+      "./dist/index.js"
     ],
     "channel": {
       "id": "feishu",
