docs: 更新 README 并注明项目来源
- 更改项目名称为 openclaw-botonline
- 添加基于 jiulingyun/openclaw-cn 的说明
- 更新安装命令和文档链接
- 修复所有子包的 workspace 依赖引用

--- a/extensions/feishu/package.json
+++ b/extensions/feishu/package.json
@@ -62,13 +62,13 @@
   },
   "peerDependencies": {
     "openclaw": "*",
-    "openclaw-cn": "*"
+    "openclaw-botonline": "*"
   },
   "peerDependenciesMeta": {
     "openclaw": {
       "optional": true
     },
-    "openclaw-cn": {
+    "openclaw-botonline": {
       "optional": true
     }
   },
