--- a/extensions/googlechat/package.json
+++ b/extensions/googlechat/package.json
@@ -31,7 +31,7 @@
     "google-auth-library": "^10.5.0"
   },
   "devDependencies": {
-    "clawdbot": "workspace:openclaw-cn@*"
+    "clawdbot": "workspace:openclaw-botonline@*"
   },
   "peerDependencies": {
     "clawdbot": ">=2026.1.25"
