--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "ui:dev": "node scripts/ui.js dev",
     "ui:build": "node scripts/ui.js build",
     "start": "node scripts/run-node.mjs",
-    "openclaw-cn": "node scripts/run-node.mjs",
+    "openclaw-botonline": "node scripts/run-node.mjs",
     "gateway:watch": "node scripts/watch-node.mjs gateway --force",
     "gateway:dev": "CLAWDBOT_SKIP_CHANNELS=1 node scripts/run-node.mjs --dev gateway",
     "gateway:dev:reset": "CLAWDBOT_SKIP_CHANNELS=1 node scripts/run-node.mjs --dev gateway --reset",
